<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.xy.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:id="@+id/reg_verify_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >

        <TableRow android:layout_marginLeft="10dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/verify_code"
                android:textColor="@color/gray_font"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/verifycode"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_edittext_nb_normal"
                android:ellipsize="end"
                android:hint="@string/verify_code_hint"
                android:inputType="text"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/verify_get_next"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/yz_btn"
                android:enabled="false"
                android:text="@string/get_verify_after_sixth"
                android:textColor="@color/whites"
                android:textSize="14sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <TableRow android:layout_marginLeft="10dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/user_login_pass"
                android:textColor="@color/gray_font"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loginpass"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_edittext_nb_normal"
                android:ellipsize="end"
                android:hint="@string/user_login_pass_hint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="16sp" />
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />
    </TableLayout>

    <LinearLayout
        android:id="@+id/login_btn_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_verify_body" >

        <Button
            android:id="@+id/button_reg"
            style="@style/Theme.Button.Large"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defalut_margin"
            android:layout_marginRight="@dimen/defalut_margin"
            android:layout_marginTop="50dp"
            android:text="@string/reg_btn" />
    </LinearLayout>

</RelativeLayout>