<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/f_f_vertical_style"
    android:background="@color/login_def_bg_global_color">

    <include layout="@layout/register_title_bar" android:id="@+id/register_title_bar"/>

    <LinearLayout
        style="@style/f_f_vertical_style"
        android:layout_below="@id/register_title_bar"
        android:paddingLeft="@dimen/defalut_margin_middle"
        android:paddingRight="@dimen/defalut_margin_middle"
        android:layout_marginTop="30dp"
        >

        <EditText
            android:id="@+id/mphone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext_nb_normal"
            android:ellipsize="end"
            android:hint="@string/mphone_hint"
            android:inputType="text"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="16sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <Button
            android:id="@+id/button_reg"
            style="@style/Theme.Button.Large"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defalut_margin"
            android:layout_marginRight="@dimen/defalut_margin"
            android:layout_marginTop="50dp"
            android:text="@string/get_mphone_code" />


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/ck_agreen"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/checkbox"
                android:button="@null"
                android:checked="true"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/reg_xieyi"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"/>
            <com.xy.view.TextURLView
                android:id="@+id/xy_url"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/last_login_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16.0dip"
        android:gravity="center_vertical"
        android:text="Copyright©新翼锦程"
        android:textColor="@color/hint_text_color"
        android:textSize="14.0sp" />
</RelativeLayout>